# 8080-emulator

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  INSTALL.md  README.md  build.sh  test.sh
.github/workflows/: github-actions.yml
SDL-GUI/: CMakeLists.txt  main.cpp  sdl.cpp  sdl.hpp  sound.cpp  sound.hpp
disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.hpp
emulator/: CMakeLists.txt  emulator.cpp  emulator.h  emulator.hpp  main.cpp
test/: CMakeLists.txt  test_da 2.cpp  test_em.cpp  test_em_logic.cpp  test_em_math.cpp  test_em_move.cpp
